# zube-mcp

./: CLAUDE.md  README.md  pyproject.toml
.claude/skills/zube-groomer/: SKILL.md
.claude/skills/zube-pre-groom-doc-writer/: SKILL.md
.cursor/skills/zube-groomer/: SKILL.md
.cursor/skills/zube-pre-groom-doc-writer/: SKILL.md
zube_mcp/: auth.py  client.py  server.py
